@startuml Frontends and Backends

skinparam componentStyle uml2

package frontend {
    package ec2 {
        class "Frontend" as ec2Frontend
        interface "Client" as ec2Client
    }

    package hegel {
        class "Frontend" as hegelFrontend
        interface "Client" as hegelClient
    }
}

package backend {
    package flatfile {
        class "Backend" as flatfileBackend
    }

    package kubernetes {
        class "Backend" as kubernetesBackend
    }
}


ec2Client <|.. flatfileBackend : satisfies
ec2Client <|.. kubernetesBackend : satisfies
ec2Frontend --> ec2Client : uses

hegelClient <|.. flatfileBackend : satisfies
hegelClient <|.. kubernetesBackend : satisfies
hegelFrontend --> hegelClient : uses


@enduml